Fixed contact section on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -210,6 +210,29 @@ html, body {
     }
 }
 
+@media (max-width: 768px) {
+    .header__content__title {
+        font-size: 3rem;
+        font-weight: normal;
+    }
+
+    .header__content__sub-title {
+        font-size: 1.5rem;
+        margin-bottom: 15px;
+    }
+
+    .header__content__sub-title::after,
+    .header__content__sub-title::before {
+        width: 60px;
+        height: 2px;
+    }
+
+    .main-btn {
+        font-size: 1.5rem !important;
+        padding: 5px 20px !important;
+    }
+}
+
 .to-top {
     width: 50px;
     aspect-ratio: 1/1;
@@ -408,6 +431,7 @@ html, body {
     }
 
     .to-top {
+        width: 45px;
         right: 10px;
         bottom: 10px;
     }
@@ -1119,6 +1143,11 @@ html, body {
     margin-bottom: 40px;
 }
 
+.footer__contact-information {
+    display: flex;
+    justify-content: center;
+}
+
 .footer__contact-information li {
     display: inline-block;
     margin-right: 50px;
@@ -1174,6 +1203,20 @@ html, body {
 @media(max-width: 991px) {
     .projects-section {
         grid-template-columns: 1fr 1fr;
+    }
+
+    .footer__contact-information {
+        flex-direction: column;
+    }
+
+    .footer__contact-information li {
+        margin-left: auto;
+        margin-right: auto !important;
+        margin-bottom: 17px;
+    }
+
+    .footer__contact-information li:last-child {
+        margin-bottom: 0;
     }
 }
 
